--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
-    "child_process": "^1.0.2",
     "file-system": "^2.2.2",
+    "fluent-ffmpeg": "^2.1.2",
     "puppeteer": "^10.4.0",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.8.2",
